--- a/views/description.ejs
+++ b/views/description.ejs
@@ -31,15 +31,15 @@
     <div class="col-md-8"> 
         
         <article class="blog-post"> 
-            <h2 class="display-5 link-body-emphasis mb-1"><%=book.title%></h2>
-            <p class="blog-post-meta">Author <%=book.autor%></p> 
-            <div class="col-md-4"> 
+            <h2 class="display-5 link-body-emphasis mb-1"><%=book[0].title%></h2>
+            <p class="blog-post-meta">Author <%=book[0].autor%></p> 
+            
         
             <h4 class="mb-0">Rating</h4>
           <div class="mb-1 text-body-secondary star-rating">
             <% 
-              const fullStars = Math.floor(book.calificacion);
-              const halfStar = book.calificacion % 1 >= 0.5 ? 1 : 0;
+              const fullStars = Math.floor(book[0].calificacion);
+              const halfStar = book[0].calificacion % 1 >= 0.5 ? 1 : 0;
               const emptyStars = 5 - fullStars - halfStar;
               let stars = '★'.repeat(fullStars);
               if (halfStar) stars += '⯨';
@@ -49,12 +49,146 @@
           </div>
             <p><%=description%></p> 
                 <hr>
-               
+        </article>
+
+    <h4 class="fs-5 link-body-emphasis mb-1">Comments</h4>
+    <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center" id="editshow"> 
+        <form  method="POST">  
+            <input type="hidden" name="id_book" value="<%= book[0].id_book %>">       
+        <div class="list-group"> 
+            <% book.forEach(comment => { %>
+                   
+                <div class="d-flex gap-2 align-items-center">
+                    <input 
+                        type="checkbox"
+                        class="comment-checkbox"
+                        name ="commentCheckbox"
+                        style="display:none;"
+                        
+                        value="<%= comment.id %>"
+                    >
+                
+   
+            
+                     
+                <div class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true"> 
+                    <svg 
+                        xmlns="http://www.w3.org/2000/svg" 
+                        width="40" 
+                        height="40" 
+                        fill="currentColor" 
+                        class="bi bi-person" 
+                        viewBox="0 0 16 16">
+                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 
+                    10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+                    </svg>
+                    <div class="d-flex gap-2 w-100 justify-content-between"> 
+                        <div> 
+                            <h6 class="mb-0"><%= comment.user_name %></h6> 
+                            <p class="mb-0 opacity-75"><%= comment.comment %></p> 
+                            <div class="mb-1 text-body-secondary star-rating">
+                                <% 
+                                const fullStars = Math.floor(comment.score);
+                                const halfStar = comment.score % 1 >= 0.5 ? 1 : 0;
+                                const emptyStars = 5 - fullStars - halfStar;
+                                let stars = '★'.repeat(fullStars);
+                                if (halfStar) stars += '⯨';
+                                stars += '☆'.repeat(emptyStars);
+                                %>
+                                <%= stars %>
+                            </div>
+                        </div> 
+                        <small class="opacity-50 text-nowrap"><%= comment.date_time.toLocaleDateString() %></small> 
+                    </div> 
+            </div>
+            </div> 
+
+             
+            <% }) %>
+            <div class="d-flex gap-2 justify-content-center">
+                <button 
+                    id="checkbox" 
+                    type="submit" 
+                    class="btn btn-danger" 
+                    style="display:none" 
+                    onclick="hidecheckbox()"
+                    formaction="/delete_comment">
+                
+                    Delete
+                </button>
+                 <button 
+                    id="checkbox2" 
+                    type="submit" 
+                    class="btn btn-danger" 
+                    style="display:none" 
+                    formaction="/edit_comment"
+                    onclick="hidecheckbox2()"
+                    >
+                
+                    Edit
+                </button>
+            </div>
+       </form>
+            
+        <div id="commentBox" style="display:none;">
+            <div class="card mt-3 p-3 shadow-sm">
+                <form action="/add_comment" method="POST">
+            
+
+                <div class="mb-2">
+                    <label>Name</label>
+                    <input type="text" name="user_name" class="form-control" required>
+                </div>
+
+                <div class="mb-2">
+                    <label>Comment</label>
+                    <textarea name="comment" class="form-control" required></textarea>
+                </div>
+
+                <div class="mb-2">
+                    <label>Rating</label>
+                    <input type="number" name="score" min="1" max="5" step="0.1" class="form-control" required>
+                </div>
+
+                <input type="hidden" name="id_book" value="<%= book[0].id_book %>">
+
+                <button type="submit" class="btn btn-primary mt-2" onclick="hideComment()">Save</button>
+                <button type="button" class="btn btn-danger mt-2" onclick="hideComment()">Cancel</button>
+             
+            </form>
+            </div>
+        </div>
+      
+            
+                
+            <div class="d-flex gap-2 justify-content-center mt-2">
+                <button id="showCommentButton" type="button" class="btn btn-primary" onclick="showComment()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0
+                     1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4">
+                    </path>
+                </svg>
+                Comment
+                </button>
+                 
+
+                <button id="showCommentButton2" type="button" class="btn btn-danger" onclick="showcheckbox()">
+                
+                Delete
+                </button>
+                 <button id="showCommentButton3" type="button" class="btn btn-warning" onclick="showcheckbox2()">
+                
+                Edit
+                </button>
+            </div>
+            
+        </div> 
+    </div>    
                                                 
     </div> 
     <div class="col-md-4"> 
         <div class="col-auto d-none d-lg-block">
-          <img src="https://covers.openlibrary.org/b/id/<%= book.cover_id %>-M.jpg"
+          <img src="https://covers.openlibrary.org/b/id/<%= book[0].cover_id %>-M.jpg"
                alt="Book cover"
                width="200"
                height="250"
@@ -63,4 +197,76 @@
     </div>
     </div>
 </main>
+<script>
+function showComment(){
+    document.getElementById("commentBox").style.display = "block";
+    document.getElementById("showCommentButton").style.display = "none";
+    
+    document.getElementById("showCommentButton2").style.display = "none";
+    document.getElementById("showCommentButton3").style.display = "none";
+}
+
+function hideComment(){
+
+    document.getElementById("commentBox").style.display = "none";
+    document.getElementById("showCommentButton").style.display = "block"
+    
+    document.getElementById("showCommentButton2").style.display = "block";
+    document.getElementById("showCommentButton3").style.display = "block";
+}
+function showcheckbox(){
+    document.getElementById("showCommentButton").style.display = "none";
+    document.getElementById("showCommentButton2").style.display = "none";
+    document.getElementById("showCommentButton3").style.display = "none";
+    document.getElementById("checkbox").style.display = "block";
+    const checkboxes = document.querySelectorAll(".comment-checkbox");
+        checkboxes.forEach(checkbox => {
+            checkbox.style.display = "block";
+        });
+        
+
+    
+}
+function showcheckbox2(){
+    document.getElementById("showCommentButton").style.display = "none";
+    document.getElementById("showCommentButton2").style.display = "none";
+    document.getElementById("showCommentButton3").style.display = "none";
+    document.getElementById("checkbox2").style.display = "block";
+    const checkboxes = document.querySelectorAll(".comment-checkbox");
+        checkboxes.forEach(checkbox => {
+            checkbox.style.display = "block";
+        });
+}
+
+
+function hidecheckbox(){
+    document.getElementById("showCommentButton").style.display = "block";
+    document.getElementById("showCommentButton2").style.display = "block";
+    document.getElementById("showCommentButton3").style.display = "block";
+    document.getElementById("checkbox").style.display = "none";
+    const checkboxes = document.querySelectorAll(".comment-checkbox");
+        checkboxes.forEach(checkbox => {
+            checkbox.style.display = "none";
+        });
+    }
+function hidecheckbox2(){
+    document.getElementById("editshow").style.display = "none" ;
+    document.getElementById("showCommentButton").style.display = "block";
+    document.getElementById("showCommentButton2").style.display = "block";
+    document.getElementById("showCommentButton3").style.display = "block";
+    document.getElementById("checkbox2").style.display = "none";
+    const checkboxes = document.querySelectorAll(".comment-checkbox");
+        checkboxes.forEach(checkbox => {
+            checkbox.style.display = "none";
+        });
+    
+
+    
+}
+
+    
+
+</script>
+
+
 <%- include("partials/footer.ejs") %>
